@@ -56,6 +56,9 @@ Changes in version 0.1.2.8-alpha - 2007-??-??
   o Minor bugfixes (performance):
     - Call router_have_min_dir_info half as often.  (This is showing up in
       some profiles, but not others.)
+    - When using GCC, make log_debug and never get called at all, and its
+      arguments never get evaluated, when no debug logs are configured.
+      (This is showing up in some profiles, but not others.)
 
   o Minor features:
     - Remove some never-implemented options.  Mark PathlenCoinWeight as
